crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__mutable-class-default_RUF012.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF012 Mutable default value for class attribute
  --> RUF012.py:9:34
   |
 7 |     }
 8 |
 9 |     mutable_default: list[int] = []
   |                                  ^^
10 |     immutable_annotation: Sequence[int] = []
11 |     without_annotation = []
   |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
  --> RUF012.py:11:26
   |
 9 |     mutable_default: list[int] = []
10 |     immutable_annotation: Sequence[int] = []
11 |     without_annotation = []
   |                          ^^
12 |     class_variable: ClassVar[list[int]] = []
13 |     final_variable: Final[list[int]] = []
   |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
  --> RUF012.py:25:26
   |
23 |     mutable_default: list[int] = []
24 |     immutable_annotation: Sequence[int] = []
25 |     without_annotation = []
   |                          ^^
26 |     perfectly_fine: list[int] = field(default_factory=list)
27 |     class_variable: ClassVar[list[int]] = []
   |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:103:38
    |
101 |     class K(SQLModel):
102 |         id: int
103 |         mutable_default: list[int] = []
    |                                      ^^
104 |
105 | from sqlmodel import SQLModel
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:128:36
    |
126 |     }
127 |
128 |     mutable_default: 'list[int]' = []
    |                                    ^^
129 |     immutable_annotation: 'Sequence[int]'= []
130 |     without_annotation = []
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:129:44
    |
128 |     mutable_default: 'list[int]' = []
129 |     immutable_annotation: 'Sequence[int]'= []
    |                                            ^^
130 |     without_annotation = []
131 |     class_variable: 'ClassVar[list[int]]' = []
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:130:26
    |
128 |     mutable_default: 'list[int]' = []
129 |     immutable_annotation: 'Sequence[int]'= []
130 |     without_annotation = []
    |                          ^^
131 |     class_variable: 'ClassVar[list[int]]' = []
132 |     final_variable: 'Final[list[int]]' = []
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:131:45
    |
129 |     immutable_annotation: 'Sequence[int]'= []
130 |     without_annotation = []
131 |     class_variable: 'ClassVar[list[int]]' = []
    |                                             ^^
132 |     final_variable: 'Final[list[int]]' = []
133 |     class_variable_without_subscript: 'ClassVar' = []
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:132:42
    |
130 |     without_annotation = []
131 |     class_variable: 'ClassVar[list[int]]' = []
132 |     final_variable: 'Final[list[int]]' = []
    |                                          ^^
133 |     class_variable_without_subscript: 'ClassVar' = []
134 |     final_variable_without_subscript: 'Final' = []
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:133:52
    |
131 |     class_variable: 'ClassVar[list[int]]' = []
132 |     final_variable: 'Final[list[int]]' = []
133 |     class_variable_without_subscript: 'ClassVar' = []
    |                                                    ^^
134 |     final_variable_without_subscript: 'Final' = []
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:134:49
    |
132 |     final_variable: 'Final[list[int]]' = []
133 |     class_variable_without_subscript: 'ClassVar' = []
134 |     final_variable_without_subscript: 'Final' = []
    |                                                 ^^
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:146:12
    |
144 | # Lint should trigger RUF012 only  for the `test` field and not the `_fields_`
145 | class S(ctypes.Structure):
146 |     test = [""]
    |            ^^^^
147 |     _fields_ = [
148 |         ("attr_set", ctypes.c_uint64),
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:155:12
    |
154 | class LES(ctypes.LittleEndianStructure):
155 |     test = [""]
    |            ^^^^
156 |     _fields_ = [
157 |         ("attr_set", ctypes.c_uint64),
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:164:12
    |
163 | class BES(ctypes.BigEndianStructure):
164 |     test = [""]
    |            ^^^^
165 |     _fields_ = [
166 |         ("attr_set", ctypes.c_uint64),
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:173:12
    |
172 | class U(ctypes.Union):
173 |     test = [""]
    |            ^^^^
174 |     _fields_ = [
175 |         ("a", LES),
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:180:12
    |
179 | class LEU(ctypes.LittleEndianUnion):
180 |     test = [""]
    |            ^^^^
181 |     _fields_ = [
182 |         ("a", LES),
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`

RUF012 Mutable default value for class attribute
   --> RUF012.py:187:12
    |
186 | class BEU(ctypes.BigEndianUnion):
187 |     test = [""]
    |            ^^^^
188 |     _fields_ = [
189 |         ("a", LES),
    |
help: Consider initializing in `__init__` or annotating with `typing.ClassVar`
