crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__needless-else_RUF047_for.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF047 [*] Empty `else` clause
 --> RUF047_for.py:6:1
  |
4 |       loop_body_is_not_checked()
5 |       break
6 | / else:
7 | |     pass
  | |________^
help: Remove the `else` clause
  |
5 |     break
  - else:
  -     pass
6 |
  |

RUF047 [*] Empty `else` clause
  --> RUF047_for.py:12:1
   |
10 |   for this in comment:
11 |       belongs_to()  # `for`
12 | / else:
13 | |     ...
   | |_______^
help: Remove the `else` clause
   |
11 |     belongs_to()  # `for`
   - else:
   -     ...
12 |
   |
